--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_run">Runs</string>
     <string name="title_stat">Stats</string>
     <string name="title_setting">Settings</string>
+    <string name="title_setup">Setup</string>
+    <string name="title_tracking">Tracking</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
